// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      <IssueMessageHighlighting
        message="Reduce the number of conditional operators (4) used in the expression"
      />
    </span>
    <IssueMessageTags />
  </div>
  <ForwardRef(Link)
    aria-label="issue.why_this_issue.long"
    className="spacer-right"
    target="_blank"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?branch=branch-6.7&files=main.js&open=AVsae-CQS-9G3txfbFN2&resolved=false&why=1&id=myproject",
      }
    }
  >
    issue.why_this_issue
  </ForwardRef(Link)>
</Fragment>
`;

exports[`should render correctly: hide why is it an issue 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      <IssueMessageHighlighting
        message="Reduce the number of conditional operators (4) used in the expression"
      />
    </span>
    <IssueMessageTags />
  </div>
</Fragment>
`;

exports[`should render correctly: is deprecated rule 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      <IssueMessageHighlighting
        message="Reduce the number of conditional operators (4) used in the expression"
      />
    </span>
    <IssueMessageTags
      ruleStatus="DEPRECATED"
    />
  </div>
  <ForwardRef(Link)
    aria-label="issue.why_this_issue.long"
    className="spacer-right"
    target="_blank"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?branch=branch-6.7&files=main.js&open=AVsae-CQS-9G3txfbFN2&resolved=false&why=1&id=myproject",
      }
    }
  >
    issue.why_this_issue
  </ForwardRef(Link)>
</Fragment>
`;

exports[`should render correctly: is removed rule 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      <IssueMessageHighlighting
        message="Reduce the number of conditional operators (4) used in the expression"
      />
    </span>
    <IssueMessageTags
      ruleStatus="REMOVED"
    />
  </div>
  <ForwardRef(Link)
    aria-label="issue.why_this_issue.long"
    className="spacer-right"
    target="_blank"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?branch=branch-6.7&files=main.js&open=AVsae-CQS-9G3txfbFN2&resolved=false&why=1&id=myproject",
      }
    }
  >
    issue.why_this_issue
  </ForwardRef(Link)>
</Fragment>
`;

exports[`should render correctly: with engine info 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      <IssueMessageHighlighting
        message="Reduce the number of conditional operators (4) used in the expression"
      />
    </span>
    <IssueMessageTags
      engine="js"
    />
  </div>
  <ForwardRef(Link)
    aria-label="issue.why_this_issue.long"
    className="spacer-right"
    target="_blank"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?branch=branch-6.7&files=main.js&open=AVsae-CQS-9G3txfbFN2&resolved=false&why=1&id=myproject",
      }
    }
  >
    issue.why_this_issue
  </ForwardRef(Link)>
</Fragment>
`;

exports[`should render correctly: with quick fix 1`] = `
<Fragment>
  <div
    className="display-inline-flex-center issue-message break-word"
  >
    <span
      className="spacer-right"
    >
      <IssueMessageHighlighting
        message="Reduce the number of conditional operators (4) used in the expression"
      />
    </span>
    <IssueMessageTags
      quickFixAvailable={true}
    />
  </div>
  <ForwardRef(Link)
    aria-label="issue.why_this_issue.long"
    className="spacer-right"
    target="_blank"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?branch=branch-6.7&files=main.js&open=AVsae-CQS-9G3txfbFN2&resolved=false&why=1&id=myproject",
      }
    }
  >
    issue.why_this_issue
  </ForwardRef(Link)>
</Fragment>
`;
